bynkc/tests/fixtures/negative/242_indexed_unkeyable_key/src/shop/a.bynk
context shop.a

type R = {
  id: String,
  active: Bool,
}

agent A {
  key k: String
  store m: Map[String, R] @indexed(by: active)

  on call howMany() -> Effect[Int] {
    let n <- m.size()
    Effect.pure(n)
  }
}
